--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
 
 * {
   font-family: "Poppins";
@@ -8,7 +8,7 @@ h1 {
   color: #555555;
   margin: 50px;
   /* font-size: 45px; */
-  font-family: "Poppins" ;
+  font-family: "Poppins";
   font-weight: 600;
 }
 .menu-list {
@@ -19,13 +19,13 @@ h1 {
 
 .menu-item-active {
   width: 100%;
-  max-height:70px;
+  max-height: 70px;
   padding: 25px;
   padding-left: 50px;
   padding-bottom: 35px;
   color: #fff;
   font-size: 20px;
-  font-weight:600;
+  font-weight: 600;
   list-style-type: none;
   cursor: pointer;
   display: flex;
@@ -35,7 +35,7 @@ h1 {
 
 .menu-item {
   width: 100%;
-  max-height:70px ;
+  max-height: 70px;
   background-color: #edebeb;
   border: 1px solid #555555;
   padding: 25px;
@@ -50,16 +50,15 @@ h1 {
   cursor: pointer;
 }
 
-
-.menu-item i{
+.menu-item i {
   float: right;
   font-size: 30px;
   /* height: 40px; */
   background-color: #edebeb;
-  margin:0;
-  padding-bottom:30px;
+  margin: 0;
+  padding-bottom: 30px;
 }
-.menu-item-active i{
+.menu-item-active i {
   float: right;
   font-size: 30px;
   background-color: #ff7a00;
@@ -70,7 +69,7 @@ h1 {
   background-color: #ff7a00;
   color: #fff;
   height: 30px;
-  padding:0px 5px;
+  padding: 0px 5px;
 }
 .container {
   background-color: #edebeb;
@@ -98,7 +97,7 @@ h1 {
 .col-lg-4 {
   background-color: #edebeb;
 }
-.card-title{
+.card-title {
   text-transform: capitalize;
 }
 
